2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* shared/interrupts/installisrentries.c,
	shared/interrupts/vectorexceptions.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove duplicate timer/Makefile from CONFIG_FILES.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mongoosev/duart/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mongoosev/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* r46xx/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* shared/cache/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* shared/interrupts/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* tx39/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-09	Joel Sherrill <joel@OARcorp.com>

	* shared/interrupts/isr_entries.S: Corrected typo in mips1 
	END_FRAME directive that lead to linker errors.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/duart/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* mongoosev/vectorisrs/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* r46xx/vectorisrs/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* r46xx/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shared/cache/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shared/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* shared/interrupts/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* timer/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* tx39/include/Makefile.am: Remove AUTOMAKE_OPTIONS.
	* tx39/Makefile.am: Remove AUTOMAKE_OPTIONS.